# hop

./: .gitignore  Cargo.toml  README.md  TODO.md  config.example.toml
packaging/aur/: PKGBUILD
packaging/aur/hop/: PKGBUILD
packaging/aur/hop-git/: PKGBUILD
src/: config.rs  main.rs  switcher.rs  x11.rs
src/switcher/: icons.rs  mod.rs  render_util.rs  resource.rs  text_util.rs
